@@ -1,3 +1,8 @@
+2004-11-13  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/callbacks.c: (cb_about_activate):
+	* src/proctable.c: (get_process_status): Removed added i18n strings.
+
 2004-11-12  Benoît Dejean  <tazforever@dlfp.org>
 
 	* src/util.c: (get_size_string):
